Add sizing for images across site

--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
             </nav>
         </div>
     </header>
-    <section id="image-section"><!--Main image goes here-->
+    <section class="image-section"><!--Main image goes here-->
         <div id="main-image"></div>
         <div id="covering-text">
             <h2>Cycling 101</h2>
