--- a/signup.html
+++ b/signup.html
@@ -38,7 +38,8 @@
             </nav>
         </div>
     </header>
-    <section class="main-section" id="sign-up">
+    <section class="image-section">
+        <div id="sign-up"></div>
         <form action="https://formdump.codeinstitute.net/" method="POST" class="details-form">
             <h2>Tell us your details!</h2>
             <div>
