--- a/equipment.html
+++ b/equipment.html
@@ -63,13 +63,13 @@
                 </article>
                 <div class="button">
                     <div class="go-button">
-                        <a class="goButton bike-button" href="#" target="_blank" rel="noopener" aria-label="Click to go to a page about the road racing bike(Opens in new tab)">Road Racing Bike</a>
+                        <a class="goButton bike-button" href="https://en.wikipedia.org/wiki/Racing_bicycle" target="_blank" rel="noopener" aria-label="Click to go to a Wikipedia page about the road racing bike(Opens in new tab)">Road Racing Bike</a>
                     </div>
                     <div class="go-button">
-                        <a class="goButton bike-button" href="#" target="_blank" rel="noopener" aria-label="Click to go to a page about the mountain bike(Opens in new tab)">Mountain Bike</a> 
+                        <a class="goButton bike-button" href="https://en.wikipedia.org/wiki/Mountain_bike" target="_blank" rel="noopener" aria-label="Click to go to a Wikipedia page about the mountain bike(Opens in new tab)">Mountain Bike</a> 
                     </div>
                     <div class="go-button">
-                        <a class="goButton bike-button" href="#" target="_blank" rel="noopener" aria-label="Click to go to a page about the hybrid bike(Opens in new tab)">Hybrid Bike</a>
+                        <a class="goButton bike-button" href="https://en.wikipedia.org/wiki/Hybrid_bicycle" target="_blank" rel="noopener" aria-label="Click to go to a Wikipedia page about the hybrid bike(Opens in new tab)">Hybrid Bike</a>
                     </div>
                 </div>
             </div>
@@ -90,10 +90,10 @@
                 </article>
                 <div class="button">
                     <div class="go-button">
-                        <a class="goButton bike-button" href="#" target="_blank" rel="noopener" aria-label="Click to go to a page about Jerseys(Opens in new tab)">Jerseys</a>
+                        <a class="goButton bike-button" href="https://en.wikipedia.org/wiki/Cycling_jersey" target="_blank" rel="noopener" aria-label="Click to go to a Wikipedia page about Jerseys(Opens in new tab)">Jerseys</a>
                     </div>
                     <div class="go-button">
-                        <a class="goButton bike-button" href="#" target="_blank" rel="noopener" aria-label="Click to go to a page about Padded Shorts(Opens in new tab)">Padded Shorts</a> 
+                        <a class="goButton bike-button" href="https://en.wikipedia.org/wiki/Cycling_shorts" target="_blank" rel="noopener" aria-label="Click to go to a page about Padded Shorts(Opens in new tab)">Padded Shorts</a> 
                     </div>
                 </div>
             </div>
@@ -110,7 +110,7 @@
                 <p>A bicycle helmet is a type of helmet designed to attenuate impacts to the head of a cyclist in falls while minimizing side effects such as interference with peripheral vision.[1] There is ongoing scientific research into the degree of protection offered by bicycle helmets in the event of an accident, and the effects of helmet wearing on cyclist and motor vehicle driver behaviour.</p>
                 <div class="button">
                     <div class="go-button">
-                        <a class="goButton bike-button" href="#" target="_blank" rel="noopener" aria-label="Click to go to a page about Helmats(Opens in new tab)">Helmats</a>
+                        <a class="goButton bike-button" href="https://en.wikipedia.org/wiki/Bicycle_helmet" target="_blank" rel="noopener" aria-label="Click to go to a Wikipedia page about Helmats(Opens in new tab)">Helmats</a>
                     </div>
                 </div>
             </div>
@@ -120,7 +120,7 @@
                 <p>A bicycle pump is a type of positive-displacement air pump specifically designed for inflating bicycle tires. It has a connection or adapter for use with one or both of the two most common types of valves used on bicycles, Schrader or Presta. A third type of valve called the Dunlop (or Woods) valve exists, but tubes with these valves can be filled using a Presta pump. Pumps are always hand to take with you on a ride.</p>
                 <div class="button">
                     <div class="go-button">
-                        <a class="goButton bike-button" href="#" target="_blank" rel="noopener" aria-label="Click to go to a page about Pumps(Opens in new tab)">Pumps</a>
+                        <a class="goButton bike-button" href="https://en.wikipedia.org/wiki/Bicycle_pump" target="_blank" rel="noopener" aria-label="Click to go to a Wikipedia page about Pumps(Opens in new tab)">Pumps</a>
                     </div>
                 </div>
             </div>
@@ -131,7 +131,7 @@
                 <p>In at least one of these bags it is a good idea to carry a small rachet, with an array of attachable fittings. These are essential to have in case anything on your bike needs adjusting.</p>
                 <div class="button">
                     <div class="go-button">
-                        <a class="goButton bike-button" href="#" target="_blank" rel="noopener" aria-label="Click to go to a page about Tools(Opens in new tab)">Tools</a>
+                        <a class="goButton bike-button" href="https://en.wikipedia.org/wiki/Bicycle_tools" target="_blank" rel="noopener" aria-label="Click to go to a Wikipedia page about Tools(Opens in new tab)">Tools</a>
                     </div>
                 </div>
             </div>
