Add correct text to index page

--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
             <div class="about-quote-container main-box-color">
                 <div>
                     <article>
-                        <p>“Life is like riding a bicycle. In order to keep your balance, you must keep moving.” — Albert Einstein</p>
+                        <p>Here you will find all that you need to help you on your way, from beginners to novice we provide all the nesscary info for all your cycling needs.</p>
                     </article>
                 </div>
                 <div class="go-button">
