Add fixs for content, spelling mistakes etc

--- a/equipment.html
+++ b/equipment.html
@@ -49,16 +49,16 @@
                     <h2>The Bicycle</h2>
                     <p>A Bicycle, also called bike, two-wheeled steerable machine that is pedaled by the rider’s feet. On a standard bicycle the wheels are mounted in-line in a metal frame, with the front wheel held in a rotatable fork.
                     Bicycles are widely used for transportation, recreation, and sport.</p>
-                    <p>Cycling, use of a bicycle for sport, recreation, or transportation. Cycling is a fantastic pasttime or hobby, it kits you fit and active all whilst taking in either the local landscape or foreign landscape.</p>
-                    <p>Here at Cycling 101 we will be talking about 3 of the main bicycle types. Road Racing, Mountain and Hybrid Bikes.</p>
+                    <p>Cycling, is the use of a bicycle for sport, recreation, or transportation. Cycling is a fantastic pasttime or hobby, it keeps you fit and active all whilst taking in either the local or foreign landscape.</p>
+                    <p>Here at Cycling 101 we will be talking about 3 of the main bicycle types: Road Racing, Mountain and Hybrid Bikes.</p>
                     <h3>Road Racing Bike</h3>
-                    p>designed for maximum speed and weigh about 20 pounds (9 kg). They have very light frames, narrow high-pressure tires, dropped handlebars, and derailleur gears with at least 16 speeds. Track-racing models have a single fixed gear.
+                    <p>This is designed for maximum speed and weigh about 20 pounds (9 kg). They have very light frames, narrow high-pressure tires, dropped handlebars, and derailleur gears with at least 16 speeds. Track-racing models have a single fixed gear.
                     </p>
                     <h3>Mountain Bike</h3>
-                    <p>have wide low-pressure tires with knobs for traction, flat handlebars, wide-range derailleur gearing with up to 27 speeds, and powerful brakes. Their flat handlebars allow an upright riding position. Many mountain bikes have front suspension similar to motorcycles. Full-suspension mountain bikes have unconventional frames to allow rear-wheel movement. Mountain bicycles weigh from less than 25 pounds to about 35 pounds (11 to 16 kg).
+                    <p>These have wide low-pressure tires with knobs for traction, flat handlebars, wide-range derailleur gearing with up to 27 speeds, and powerful brakes. Their flat handlebars allow an upright riding position. Many mountain bikes have front suspension similar to motorcycles. Full-suspension mountain bikes have unconventional frames to allow rear-wheel movement. Mountain bicycles weigh from less than 25 pounds to about 35 pounds (11 to 16 kg).
                     </p>
                     <h3>Hybrid Bikes</h3>
-                    <p>Hybrid bicycles combine the features of road bicycles and mountain bikes. They have become very popular and are generally used for light recreation and urban commuting. Most have flat handlebars and medium-width tires designed for paved roads.</p>
+                    <p>This type of bike combines the features of road bicycles and mountain bikes. They have become very popular and are generally used for light recreation and urban commuting. Most have flat handlebars and medium-width tires designed for paved roads.</p>
                     <h3>Useful links:</h3>
                 </article>
                 <div class="button">
@@ -83,7 +83,7 @@
             <div class="main-section-text main-box-color">
                 <article>
                 <h2>Clothing</h2>
-                <p>Clothing for cycling is a must, from top to bottoms it is vitally important that what ever it is you wear is comfortable for you. Here we will detail two of the most important clothing types. The top and the shorts.</p>
+                <p>Proper clothing for cycling is a must, from top to bottoms it is vitally important that what ever it is you wear is comfortable for you. Here we will detail two of the most important clothing types. The top and the shorts.</p>
                 <p><h3>Jerseys</h3> Usually shaped like a t-shirt but made from wicking synthetic materials or a blend incorporating Merino wool, a cycling jersey usually has a high neck to protect you from the sun, a zip at the front — the length varies — and pockets at the back to carry your stuff. The most common jerseys have short or long sleeves, though sleeveless jerseys are also available for very hot weather.
                     Jersey fabrics range from ultra-light breathable mesh, to thick windproof and water-resistant fabrics. There’s a grey area where thick, weatherproof jerseys merge into jackets while the lightest jerseys are little more than base layers with pockets.</p>
                 <p><h3>Padded Shorts</h3>The definitive item of specialist cycling gear, classic cycling shorts are made from stretchy Nylon/Lycra with a pad inside to cushion your bum, as discussed above. There are two variants, waist shorts and bib shorts. Waist shorts have an elastic waist band to hold them up, while bib shorts have built in braces.</p>
@@ -105,19 +105,19 @@
     <section class="main-section"><!--Essentials section-->
         <div class="three-box-section">
             <div class="one-third-box main-box-color"><!--Info taken from Wiki-->
-                <h2>The Helmat</h2>
+                <h2>The Helmet</h2>
                 <img src="Assests/Images/Types_of_Bicycle_Helmets.png" alt="Pictue of three different type bike helmets">
-                <p>A bicycle helmet is a type of helmet designed to attenuate impacts to the head of a cyclist in falls while minimizing side effects such as interference with peripheral vision.[1] There is ongoing scientific research into the degree of protection offered by bicycle helmets in the event of an accident, and the effects of helmet wearing on cyclist and motor vehicle driver behaviour.</p>
+                <p>A bicycle helmet is a type of helmet designed to protect against impact to the head of a cyclist in falls while minimizing side effects such as interference with peripheral vision.[1] There is ongoing scientific research into the degree of protection offered by bicycle helmets in the event of an accident, and the effects of helmet wearing on cyclist and motor vehicle driver behaviour.</p>
                 <div class="button">
                     <div class="go-button">
-                        <a class="goButton bike-button" href="https://en.wikipedia.org/wiki/Bicycle_helmet" target="_blank" rel="noopener" aria-label="Click to go to a Wikipedia page about Helmats(Opens in new tab)">Helmats</a>
+                        <a class="goButton bike-button" href="https://en.wikipedia.org/wiki/Bicycle_helmet" target="_blank" rel="noopener" aria-label="Click to go to a Wikipedia page about Helmats(Opens in new tab)">Helmets</a>
                     </div>
                 </div>
             </div>
             <div class="one-third-box main-box-color">
                 <h2>The Pump</h2>
                 <img src="Assests/Images/bike-pumps.jpg" alt="A picture of a bicycle pump">
-                <p>A bicycle pump is a type of positive-displacement air pump specifically designed for inflating bicycle tires. It has a connection or adapter for use with one or both of the two most common types of valves used on bicycles, Schrader or Presta. A third type of valve called the Dunlop (or Woods) valve exists, but tubes with these valves can be filled using a Presta pump. Pumps are always hand to take with you on a ride.</p>
+                <p>A bicycle pump is a type of positive-displacement air pump specifically designed for inflating bicycle tires. It has a connection or adapter for use with one or both of the two most common types of valves used on bicycles, Schrader or Presta. A third type of valve called the Dunlop (or Woods) valve exists, but tubes with these valves can be filled using a Presta pump. Pumps are always handy to take with you on a ride.</p>
                 <div class="button">
                     <div class="go-button">
                         <a class="goButton bike-button" href="https://en.wikipedia.org/wiki/Bicycle_pump" target="_blank" rel="noopener" aria-label="Click to go to a Wikipedia page about Pumps(Opens in new tab)">Pumps</a>
