--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
             <div class="about-quote-container main-box-color">
                 <div>
                     <article>
-                        <p>Here you will find all that you need to help you on your way, from beginners to novice we provide all the nesscary info for all your cycling needs.</p>
+                        <p>Here you will find all that you need to help you on your way. From beginners to novice, we provide all the necessary info for all your cycling needs.</p>
                     </article>
                 </div>
                 <div class="go-button">
