--- a/route.html
+++ b/route.html
@@ -43,12 +43,12 @@
             <div class="main-section-text main-box-color">
                 <h2>How to choose a route</h2>
                 <p>When choosing a route to cycle, most people will follow a main road way or the most popular route. These selections are fine, but they will always be busy with either other cyclists or cars.
-                    To really get a sense of adventure and the thrill of discovering new land scape, there area few options to choosing a route.
+                    To really get a sense of adventure and the thrill of discovering new landscape, there are a few options to choosing a route.
                 </p>
                 <p><h4>Take Side Roads</h4> By taking side roads, you can avoid most of the traffic that comes with cycling on main roads. Meaning you can keep up a decent pace and take in the landscape. Even slow down at times when there is something beautiful to look at.</p>
                 <p><h4>Take a look at local maps</h4> By Looking at local maps of your area you can see what side roads to take and where there are hills possibly to avoid.</p>
                 <p><h4>Get suggestions from other riders</h4> By asking other riders for suggestions you can get the best routes as other riders may be fairly experianced and will tell you the best ways to go. To find other riders you can join clubs or pop into local cycling shops and ask.</p>
-                <p><h4>A Map</h4> Take a map with you, it is the most easiest and straight forward thing to do, everytime you stop take out your map and plan the rest of the way. Works with google, apple or bing maps too on your smartphone.</p>
+                <p><h4>A Map</h4> Take a map with you, it is the easiest and most straight forward thing to do, everytime you stop take out your map and plan the rest of the way. Works with google, apple or bing maps too on your smartphone.</p>
             </div>
             <div class="bike-section-media">
                 <img src="Assests/Images/route-picture.jpg" alt="Image of cyclist looking at the winding road ahead">
@@ -63,17 +63,17 @@
                 <iframe src="https://www.google.com/maps/embed?pb=!1m28!1m12!1m3!1d38023.11458174982!2d-5.851053449558181!3d54.56534515755178!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!4m13!3e1!4m5!1s0x48610975a21e69ab%3A0x8de4d08e58098ce6!2sBelfast%20BT5%205BQ!3m2!1d54.596858!2d-5.886393099999999!4m5!1s0x48610b4458a1149f%3A0x174d2ab9d447862!2sComber%2C%20Newtownards!3m2!1d54.550454699999996!2d-5.7456751!5e1!3m2!1sen!2suk!4v1625578148994!5m2!1sen!2suk" width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy"></iframe>
                 <div class="button">
                     <div class="go-button">
-                        <a class="goButton bike-button" href="https://www.alltrails.com/explore/trail/northern-ireland/antrim/comber-greenway--3" target="_blank" rel="noopener" aria-label="Click here for more information on the route in All Trials(Opens in a new tab)">All Trails</a>
+                        <a class="goButton bike-button" href="https://www.alltrails.com/explore/trail/northern-ireland/antrim/comber-greenway--3" target="_blank" rel="noopener" aria-label="Click here for more information on the route in All Trials(Opens in a new tab)">AllTrails</a>
                     </div>
                 </div>
             </div>
             <div class="one-third-box main-box-color">
                 <h2>Route 2</h2>
-                <p>This route is a circular route on Cave Hill, you can take it either way, and it is a moderate cycling.</p>
+                <p>This route is a circular route on Cave Hill, you can take it either way, and it is a moderate cycling route.</p>
                 <iframe src="https://www.google.com/maps/embed?pb=!1m14!1m12!1m3!1d7977.9226105487805!2d-5.95204371814857!3d54.644122436472884!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!5e1!3m2!1sen!2suk!4v1625580684568!5m2!1sen!2suk" width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy"></iframe>
                 <div class="button">
                     <div class="go-button">
-                        <a class="goButton bike-button" href="https://www.alltrails.com/explore/trail/northern-ireland/antrim/cavehill-circular" target="_blank" rel="noopener" aria-label="Click here for more information on the route in All Trials(Opens in a new tab)">All Trails</a>
+                        <a class="goButton bike-button" href="https://www.alltrails.com/explore/trail/northern-ireland/antrim/cavehill-circular" target="_blank" rel="noopener" aria-label="Click here for more information on the route in All Trials(Opens in a new tab)">AllTrails</a>
                     </div>
                 </div>
             </div>
@@ -83,7 +83,7 @@
                 <iframe src="https://www.google.com/maps/embed?pb=!1m28!1m12!1m3!1d63980.576985956424!2d-6.0400339434433175!3d54.54393585903106!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!4m13!3e1!4m5!1s0x4861098d6dbce215%3A0x5ada80f51fbe5057!2sLagan%20Tow%20Path%2C%20Stranmillis%20Embankment%2C%20Belfast%20BT9%205FL!3m2!1d54.5701739!2d-5.9278357999999995!4m5!1s0x4860fd87d4a2c71d%3A0xc297ab8d94f3183b!2sLisburn!3m2!1d54.516245999999995!2d-6.058010599999999!5e1!3m2!1sen!2suk!4v1625580890635!5m2!1sen!2suk" width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy"></iframe>
                 <div class="button">
                     <div class="go-button">
-                        <a class="goButton bike-button" href="https://www.alltrails.com/explore/trail/northern-ireland/antrim/lagan-towpath?mobileMap=false&ref=sidebar-static-map" target="_blank" rel="noopener" aria-label="Click here for more information on the route in All Trials(Opens in a new tab)">All Trails</a>
+                        <a class="goButton bike-button" href="https://www.alltrails.com/explore/trail/northern-ireland/antrim/lagan-towpath?mobileMap=false&ref=sidebar-static-map" target="_blank" rel="noopener" aria-label="Click here for more information on the route in All Trials(Opens in a new tab)">AllTrails</a>
                     </div>
                 </div>
             </div>
