Add some changes to code as shown on a html validator

--- a/index.html
+++ b/index.html
@@ -50,9 +50,7 @@
         <div class="outer-container">
             <div class="about-quote-container main-box-color">
                 <div>
-                    <article>
-                        <p>Here you will find all that you need to help you on your way. From beginners to novice, we provide all the necessary info for all your cycling needs.</p>
-                    </article>
+                    <p>Here you will find all that you need to help you on your way. From beginners to novice, we provide all the necessary info for all your cycling needs.</p>
                 </div>
                 <div class="go-button">
                     <a class="goButton" href="equipment.html">Find Out More</a>
@@ -60,9 +58,7 @@
             </div>
             <div class="about-quote-container main-box-color">
                 <div>
-                    <article>
-                        <p>“Life is like riding a bicycle. In order to keep your balance, you must keep moving.” — Albert Einstein</p>
-                    </article>
+                    <p>“Life is like riding a bicycle. In order to keep your balance, you must keep moving.” — Albert Einstein</p>
                 </div>
                 <div class="go-button">
                     <a class="goButton" href="equipment.html">Find Out More</a>
@@ -72,7 +68,7 @@
     </section>
     <footer>
         <div class="innerfooter1"><!--Footer will contain links to social media-->
-            <h3>&copy Cycling 101</h3>
+            <h3>&copy; Cycling 101</h3>
         </div>
         <div class="innerfooter2">
             <ul class="media-links">
