Add change of html as suggested by HTML editor

--- a/equipment.html
+++ b/equipment.html
@@ -84,9 +84,9 @@
                 <article>
                 <h2>Clothing</h2>
                 <p>Proper clothing for cycling is a must, from top to bottoms it is vitally important that what ever it is you wear is comfortable for you. Here we will detail two of the most important clothing types. The top and the shorts.</p>
-                <p><h3>Jerseys</h3> Usually shaped like a t-shirt but made from wicking synthetic materials or a blend incorporating Merino wool, a cycling jersey usually has a high neck to protect you from the sun, a zip at the front — the length varies — and pockets at the back to carry your stuff. The most common jerseys have short or long sleeves, though sleeveless jerseys are also available for very hot weather.
+                <h3>Jerseys</h3><p>Usually shaped like a t-shirt but made from wicking synthetic materials or a blend incorporating Merino wool, a cycling jersey usually has a high neck to protect you from the sun, a zip at the front — the length varies — and pockets at the back to carry your stuff. The most common jerseys have short or long sleeves, though sleeveless jerseys are also available for very hot weather.
                     Jersey fabrics range from ultra-light breathable mesh, to thick windproof and water-resistant fabrics. There’s a grey area where thick, weatherproof jerseys merge into jackets while the lightest jerseys are little more than base layers with pockets.</p>
-                <p><h3>Padded Shorts</h3>The definitive item of specialist cycling gear, classic cycling shorts are made from stretchy Nylon/Lycra with a pad inside to cushion your bum, as discussed above. There are two variants, waist shorts and bib shorts. Waist shorts have an elastic waist band to hold them up, while bib shorts have built in braces.</p>
+                <h3>Padded Shorts</h3><p>The definitive item of specialist cycling gear, classic cycling shorts are made from stretchy Nylon/Lycra with a pad inside to cushion your bum, as discussed above. There are two variants, waist shorts and bib shorts. Waist shorts have an elastic waist band to hold them up, while bib shorts have built in braces.</p>
                 </article>
                 <div class="button">
                     <div class="go-button">
@@ -143,7 +143,7 @@
         <iframe src="https://www.google.com/maps/embed?pb=!1m16!1m12!1m3!1d60000.25946300302!2d-5.9147547215103415!3d54.59092788880417!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!2m1!1sbike%20shops%20in%20belfast!5e0!3m2!1sen!2sie!4v1625218740171!5m2!1sen!2sie" width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy"></iframe>
     </section>
     <footer><!--Footer will contain links to social media-->
-        <h3>&copy Cycling 101</h3>
+        <h3>&copy; Cycling 101</h3>
         <ul class="media-links">
             <li>
                 <a href="https://facebook.com" target="_blank" rel="noopener" aria-label="Click to visit our Facebook Page(opens in new tab)"><i class="fab fa-facebook-f"></i></a>
