Add change of html as suggested by HTML editor

--- a/signup.html
+++ b/signup.html
@@ -58,7 +58,7 @@
         </form>
     </section>
     <footer><!--Footer will contain links to social media-->
-        <h3>&copy Cycling 101</h3>
+        <h3>&copy; Cycling 101</h3>
         <ul class="media-links">
             <li>
                 <a href="https://facebook.com" target="_blank" rel="noopener" aria-label="Click to visit our Facebook Page(opens in new tab)"><i class="fab fa-facebook-f"></i></a>
