--- a/equipment.html
+++ b/equipment.html
@@ -41,65 +41,60 @@
             </nav>
         </div>
     </header>
-    <section><!--Bike section-->
-        <div class="main-section">
-            <div class="main-section-text main-box-color">
-                <!--All content here has been taken from Britannica Website-->
-                <article>
-                    <h2>The Bicycle</h2>
-                    <p>A Bicycle, also called bike, two-wheeled steerable machine that is pedaled by the rider’s feet. On a standard bicycle the wheels are mounted in-line in a metal frame, with the front wheel held in a rotatable fork.
-                    Bicycles are widely used for transportation, recreation, and sport.</p>
-                    <p>Cycling, is the use of a bicycle for sport, recreation, or transportation. Cycling is a fantastic pasttime or hobby, it keeps you fit and active all whilst taking in either the local or foreign landscape.</p>
-                    <p>Here at Cycling 101 we will be talking about 3 of the main bicycle types: Road Racing, Mountain and Hybrid Bikes.</p>
-                    <h3>Road Racing Bike</h3>
-                    <p>This is designed for maximum speed and weigh about 20 pounds (9 kg). They have very light frames, narrow high-pressure tires, dropped handlebars, and derailleur gears with at least 16 speeds. Track-racing models have a single fixed gear.
-                    </p>
-                    <h3>Mountain Bike</h3>
-                    <p>These have wide low-pressure tires with knobs for traction, flat handlebars, wide-range derailleur gearing with up to 27 speeds, and powerful brakes. Their flat handlebars allow an upright riding position. Many mountain bikes have front suspension similar to motorcycles. Full-suspension mountain bikes have unconventional frames to allow rear-wheel movement. Mountain bicycles weigh from less than 25 pounds to about 35 pounds (11 to 16 kg).
-                    </p>
-                    <h3>Hybrid Bikes</h3>
-                    <p>This type of bike combines the features of road bicycles and mountain bikes. They have become very popular and are generally used for light recreation and urban commuting. Most have flat handlebars and medium-width tires designed for paved roads.</p>
-                    <h3>Useful links:</h3>
-                </article>
-                <div class="button">
-                    <div class="go-button">
-                        <a class="goButton bike-button" href="https://en.wikipedia.org/wiki/Racing_bicycle" target="_blank" rel="noopener" aria-label="Click to go to a Wikipedia page about the road racing bike(Opens in new tab)">Road Racing Bike</a>
-                    </div>
-                    <div class="go-button">
-                        <a class="goButton bike-button" href="https://en.wikipedia.org/wiki/Mountain_bike" target="_blank" rel="noopener" aria-label="Click to go to a Wikipedia page about the mountain bike(Opens in new tab)">Mountain Bike</a> 
-                    </div>
-                    <div class="go-button">
-                        <a class="goButton bike-button" href="https://en.wikipedia.org/wiki/Hybrid_bicycle" target="_blank" rel="noopener" aria-label="Click to go to a Wikipedia page about the hybrid bike(Opens in new tab)">Hybrid Bike</a>
-                    </div>
+    <section class="main-section"><!--Bike section-->
+        <div class="main-section-text main-box-color"><!--All content here has been taken from Britannica Website-->
+            <article>
+                <h2>The Bicycle</h2>
+                <p>A Bicycle, also called bike, two-wheeled steerable machine that is pedaled by the rider’s feet. On a standard bicycle the wheels are mounted in-line in a metal frame, with the front wheel held in a rotatable fork.
+                Bicycles are widely used for transportation, recreation, and sport.</p>
+                <p>Cycling, is the use of a bicycle for sport, recreation, or transportation. Cycling is a fantastic pasttime or hobby, it keeps you fit and active all whilst taking in either the local or foreign landscape.</p>
+                <p>Here at Cycling 101 we will be talking about 3 of the main bicycle types: Road Racing, Mountain and Hybrid Bikes.</p>
+                <h3>Road Racing Bike</h3>
+                <p>This is designed for maximum speed and weigh about 20 pounds (9 kg). They have very light frames, narrow high-pressure tires, dropped handlebars, and derailleur gears with at least 16 speeds. Track-racing models have a single fixed gear.
+                </p>
+                <h3>Mountain Bike</h3>
+                <p>These have wide low-pressure tires with knobs for traction, flat handlebars, wide-range derailleur gearing with up to 27 speeds, and powerful brakes. Their flat handlebars allow an upright riding position. Many mountain bikes have front suspension similar to motorcycles. Full-suspension mountain bikes have unconventional frames to allow rear-wheel movement. Mountain bicycles weigh from less than 25 pounds to about 35 pounds (11 to 16 kg).
+                </p>
+                <h3>Hybrid Bikes</h3>
+                <p>This type of bike combines the features of road bicycles and mountain bikes. They have become very popular and are generally used for light recreation and urban commuting. Most have flat handlebars and medium-width tires designed for paved roads.</p>
+                <h3>Useful links:</h3>
+            </article>
+            <div class="button">
+                <div class="go-button">
+                    <a class="goButton bike-button" href="https://en.wikipedia.org/wiki/Racing_bicycle" target="_blank" rel="noopener" aria-label="Click to go to a Wikipedia page about the road racing bike(Opens in new tab)">Road Racing Bike</a>
                 </div>
-            </div>
-            <div class="bike-section-media">
-                <iframe src="https://www.youtube.com/embed/Znt0UuZW2nU" title="YouTube video player" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+                <div class="go-button">
+                    <a class="goButton bike-button" href="https://en.wikipedia.org/wiki/Mountain_bike" target="_blank" rel="noopener" aria-label="Click to go to a Wikipedia page about the mountain bike(Opens in new tab)">Mountain Bike</a> 
+                </div>
+                 <div class="go-button">
+                    <a class="goButton bike-button" href="https://en.wikipedia.org/wiki/Hybrid_bicycle" target="_blank" rel="noopener" aria-label="Click to go to a Wikipedia page about the hybrid bike(Opens in new tab)">Hybrid Bike</a>
+                </div>
             </div>
         </div>
+        <div class="bike-section-media">
+            <iframe src="https://www.youtube.com/embed/Znt0UuZW2nU" title="YouTube video player" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+        </div>
     </section>
-    <section><!--Clothes section-->
-        <div class="main-section"><!--Content here take from Road.cc-->
-            <div class="main-section-text main-box-color">
-                <article>
-                <h2>Clothing</h2>
-                <p>Proper clothing for cycling is a must, from top to bottoms it is vitally important that what ever it is you wear is comfortable for you. Here we will detail two of the most important clothing types. The top and the shorts.</p>
-                <h3>Jerseys</h3><p>Usually shaped like a t-shirt but made from wicking synthetic materials or a blend incorporating Merino wool, a cycling jersey usually has a high neck to protect you from the sun, a zip at the front — the length varies — and pockets at the back to carry your stuff. The most common jerseys have short or long sleeves, though sleeveless jerseys are also available for very hot weather.
-                    Jersey fabrics range from ultra-light breathable mesh, to thick windproof and water-resistant fabrics. There’s a grey area where thick, weatherproof jerseys merge into jackets while the lightest jerseys are little more than base layers with pockets.</p>
-                <h3>Padded Shorts</h3><p>The definitive item of specialist cycling gear, classic cycling shorts are made from stretchy Nylon/Lycra with a pad inside to cushion your bum, as discussed above. There are two variants, waist shorts and bib shorts. Waist shorts have an elastic waist band to hold them up, while bib shorts have built in braces.</p>
-                </article>
-                <div class="button">
-                    <div class="go-button">
-                        <a class="goButton bike-button" href="https://en.wikipedia.org/wiki/Cycling_jersey" target="_blank" rel="noopener" aria-label="Click to go to a Wikipedia page about Jerseys(Opens in new tab)">Jerseys</a>
-                    </div>
-                    <div class="go-button">
-                        <a class="goButton bike-button" href="https://en.wikipedia.org/wiki/Cycling_shorts" target="_blank" rel="noopener" aria-label="Click to go to a page about Padded Shorts(Opens in new tab)">Padded Shorts</a> 
-                    </div>
+    <section class="main-section"><!--Clothes section-->
+        <div class="main-section-text main-box-color"><!--Content here take from Road.cc-->
+            <article>
+            <h2>Clothing</h2>
+            <p>Proper clothing for cycling is a must, from top to bottoms it is vitally important that what ever it is you wear is comfortable for you. Here we will detail two of the most important clothing types. The top and the shorts.</p>
+            <h3>Jerseys</h3><p>Usually shaped like a t-shirt but made from wicking synthetic materials or a blend incorporating Merino wool, a cycling jersey usually has a high neck to protect you from the sun, a zip at the front — the length varies — and pockets at the back to carry your stuff. The most common jerseys have short or long sleeves, though sleeveless jerseys are also available for very hot weather.
+                Jersey fabrics range from ultra-light breathable mesh, to thick windproof and water-resistant fabrics. There’s a grey area where thick, weatherproof jerseys merge into jackets while the lightest jerseys are little more than base layers with pockets.</p>
+            <h3>Padded Shorts</h3><p>The definitive item of specialist cycling gear, classic cycling shorts are made from stretchy Nylon/Lycra with a pad inside to cushion your bum, as discussed above. There are two variants, waist shorts and bib shorts. Waist shorts have an elastic waist band to hold them up, while bib shorts have built in braces.</p>
+            </article>
+            <div class="button">
+                <div class="go-button">
+                    <a class="goButton bike-button" href="https://en.wikipedia.org/wiki/Cycling_jersey" target="_blank" rel="noopener" aria-label="Click to go to a Wikipedia page about Jerseys(Opens in new tab)">Jerseys</a>
+                </div>
+                <div class="go-button">
+                    <a class="goButton bike-button" href="https://en.wikipedia.org/wiki/Cycling_shorts" target="_blank" rel="noopener" aria-label="Click to go to a page about Padded Shorts(Opens in new tab)">Padded Shorts</a> 
                 </div>
             </div>
-            <div class="bike-section-media">
-                <img src="Assests/Images/jersey-image.jpg" alt="Man on bike pedalling towards camera">
-            </div>
+        </div>
+        <div class="bike-section-media">
+            <img src="Assests/Images/jersey-image.jpg" alt="Man on bike pedalling towards camera">
         </div>
     </section>
     <section class="main-section"><!--Essentials section-->
