Add change of name to folders to align with industry standard, updated links in code to reflect this. Commented code taken away

--- a/equipment.html
+++ b/equipment.html
@@ -7,7 +7,7 @@
     <meta name="description" content="Cycling 101 information for novice and beginner cyclists in Belfast">
     <meta name="keywords" content="cycling 101, information on cycling, beginners, novice, belfast">
 
-    <link rel="stylesheet" href="Assests/CSS/styles.css">
+    <link rel="stylesheet" href="assets/css/styles.css">
     <title>Cycling 101</title>
     <style>
         
@@ -94,14 +94,14 @@
             </div>
         </div>
         <div class="bike-section-media">
-            <img src="Assests/Images/jersey-image.jpg" alt="Man on bike pedalling towards camera">
+            <img src="assets/images/jersey-image.jpg" alt="Man on bike pedalling towards camera">
         </div>
     </section>
     <section class="main-section"><!--Essentials section-->
         <div class="three-box-section">
             <div class="one-third-box main-box-color"><!--Info taken from Wiki-->
                 <h2>The Helmet</h2>
-                <img src="Assests/Images/Types_of_Bicycle_Helmets.png" alt="Pictue of three different type bike helmets">
+                <img src="assets/images/Types_of_Bicycle_Helmets.png" alt="Pictue of three different type bike helmets">
                 <p>A bicycle helmet is a type of helmet designed to protect against impact to the head of a cyclist in falls while minimizing side effects such as interference with peripheral vision.[1] There is ongoing scientific research into the degree of protection offered by bicycle helmets in the event of an accident, and the effects of helmet wearing on cyclist and motor vehicle driver behaviour.</p>
                 <div class="button">
                     <div class="go-button">
@@ -111,7 +111,7 @@
             </div>
             <div class="one-third-box main-box-color">
                 <h2>The Pump</h2>
-                <img src="Assests/Images/bike-pumps.jpg" alt="A picture of a bicycle pump">
+                <img src="assets/images/bike-pumps.jpg" alt="A picture of a bicycle pump">
                 <p>A bicycle pump is a type of positive-displacement air pump specifically designed for inflating bicycle tires. It has a connection or adapter for use with one or both of the two most common types of valves used on bicycles, Schrader or Presta. A third type of valve called the Dunlop (or Woods) valve exists, but tubes with these valves can be filled using a Presta pump. Pumps are always handy to take with you on a ride.</p>
                 <div class="button">
                     <div class="go-button">
@@ -121,7 +121,7 @@
             </div>
             <div class="one-third-box main-box-color">
                 <h2>The Tools</h2>
-                <img src="Assests/Images/rachet.jpg" alt="Image of a reversable rachet with an array of fittings"><!--Image was taken from Machine Mart website-->
+                <img src="assets/images/rachet.jpg" alt="Image of a reversable rachet with an array of fittings"><!--Image was taken from Machine Mart website-->
                 <p>When cycling, you always need to carry tools. The best way to carry these is either in a saddle bag or a handle bar bag. Either of these bags are a must.</p>
                 <p>In at least one of these bags it is a good idea to carry a small rachet, with an array of attachable fittings. These are essential to have in case anything on your bike needs adjusting.</p>
                 <div class="button">
