--- a/route.html
+++ b/route.html
@@ -7,7 +7,7 @@
     <meta name="description" content="Cycling 101 information for novice and beginner cyclists in Belfast">
     <meta name="keywords" content="cycling 101, information on cycling, beginners, novice, belfast">
 
-    <link rel="stylesheet" href="Assests/CSS/styles.css">
+    <link rel="stylesheet" href="assets/css/styles.css">
     <title>Cycling 101</title>
 </head>
 <body>
@@ -53,7 +53,7 @@
             </article>
             </div>
             <div class="bike-section-media">
-                <img src="Assests/Images/route-picture.jpg" alt="Image of cyclist looking at the winding road ahead">
+                <img src="assets/images/route-picture.jpg" alt="Image of cyclist looking at the winding road ahead">
             </div>
         </div>
     </section>
