--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <meta name="description" content="Cycling 101 information for novice and beginner cyclists in Belfast">
     <meta name="keywords" content="cycling 101, information on cycling, beginners, novice, belfast">
 
-    <link rel="stylesheet" href="Assests/CSS/styles.css">
+    <link rel="stylesheet" href="assets/css/styles.css">
     <title>Cycling 101</title>
 </head>
 <body>
