Change of commenting in index page

--- a/index.html
+++ b/index.html
@@ -11,16 +11,17 @@
     <title>Cycling 101</title>
 </head>
 <body>
-    <header><!--Header contains Logo(linked) and symbol of bike-->
+    <!--Header contains Logo(linked) and symbol of bike-->
+    <header>
         <div class="heading">
+            <!--Centered Logo-->
             <a href="index.html" class="logo">
                 <h1>Cycling 101</h1>
             </a>
-            <!--<i class="fas fa-biking" class="bike"></i>-->
         </div>
+        <!--Nav bar centered-->
         <div class="navigation">
             <nav>
-                <!--Nav bar goes here, centered-->
                 <ul class="links">
                     <li>
                         <a href="index.html" class="open">Home</a>
@@ -38,14 +39,16 @@
             </nav>
         </div>
     </header>
-    <section class="image-section"><!--Main image goes here-->
+    <!--Main Image-->
+    <section class="image-section">
         <div id="main-image"></div>
         <div id="covering-text">
             <h2>Cycling 101</h2>
             <h3>Take it all in</h3>
         </div>
     </section>
-    <section class="main-home-section"><!--About adn testimonial goes here-->
+    <!--About site and quote section-->
+    <section class="main-home-section">
         <h2>Welcome to Cycling 101</h2>
         <div class="outer-container">
             <div class="about-quote-container main-box-color">
@@ -67,7 +70,8 @@
         </div>
     </section>
     <footer>
-        <div class="innerfooter1"><!--Footer will contain links to social media-->
+        <!--Footer, will contain links to social media-->
+        <div class="innerfooter1">
             <h3>&copy; Cycling 101</h3>
         </div>
         <div class="innerfooter2">
